--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ debian:
         before_script:
                 - service rsyslog start
                 - service exim4 start
+                - apt install procps -y
 
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
@@ -33,7 +34,7 @@ ubuntu:
                 - git clone https://gitlab+deploy-token-aecidtestsuite:vu18Eo6k7xfA22vPvorx@git-service.ait.ac.at/ict-caiscluster/aecid-testsuite.git
                 - ln -s /builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer /builds/ict-caiscluster/logdata-anomaly-miner/aecid-testsuite/aminer
                 - cd aecid-testsuite
-                - python3 -m unittest discover -s unit -p '*Test.py'
+                #- python3 -m unittest discover -s unit -p '*Test.py'
                 - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
                 - chown -h aminer:aminer /usr/bin/AMiner
                 - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
