--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,6 @@ ubuntu:
                 - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
                 - chown -h aminer:aminer /usr/bin/AMiner
                 - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
-                #- python3 -m unittest discover -s unit -p '*Test.py'
                 - cd integration
                 - cp config* /tmp
                 - chmod +x aminerIntegrationTest.sh
@@ -47,3 +46,4 @@ ubuntu:
                 - ./aminerIntegrationTest.sh
                 - ./aminerIntegrationTest2.sh
                 - cd ..
+                - python3 -m unittest discover -s unit -p '*Test.py'
