--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ debian:
                 - chmod +x aminerIntegrationTest2.sh
                 - ./aminerIntegrationTest.sh
                 - ./aminerIntegrationTest2.sh
+                - rm /var/mail/mail
+                - rm /var/spool/mail/mail
                 - cd ..
                 - python3 -m unittest discover -s unit -p '*Test.py'
                 
@@ -44,5 +46,7 @@ ubuntu:
                 - chmod +x aminerIntegrationTest2.sh
                 - ./aminerIntegrationTest.sh
                 - ./aminerIntegrationTest2.sh
+                - rm /var/mail/mail
+                - rm /var/spool/mail/mail
                 - cd ..
                 - python3 -m unittest discover -s unit -p '*Test.py'
