added automatic test coverage measurements to the tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ debian:
                 - service rsyslog start
                 - service exim4 start
                 - apt install procps -y
+                - pip3 install coverage
 
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
@@ -22,7 +23,15 @@ debian:
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
                 - cd .. #
-                - python3 -m unittest discover -s unit -p '*Test.py'
+                - coverage run --source=. -m unittest discover -s unit -p '*Test.py'
+                - touch /tmp/report
+                - echo 'Statement Coverage:' > /tmp/report
+                - coverage report > /tmp/report
+                - echo > /tmp/report
+                - coverage run --source=. --branch -m unittest discover -s unit -p '*Test.py'
+                - echo 'Branch Coverage:' > /tmp/report
+                - coverage report > /tmp/report
+                - cat /tmp/report
                 
 ubuntu:
         image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-ubuntu
@@ -30,6 +39,7 @@ ubuntu:
         before_script:
                 - service rsyslog start
                 - service exim4 start
+                - pip3 install coverage
         
         script:
                 - ansible-playbook /opt/ansible/playbook.yml
@@ -47,4 +57,11 @@ ubuntu:
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
                 - cd ..
-                - python3 -m unittest discover -s unit -p '*Test.py'
+                - touch /tmp/report
+                - echo 'Statement Coverage:' > /tmp/report
+                - coverage report > /tmp/report
+                - echo > /tmp/report
+                - coverage run --source=. --branch -m unittest discover -s unit -p '*Test.py'
+                - echo 'Branch Coverage:' > /tmp/report
+                - coverage report > /tmp/report
+                - cat /tmp/report
