--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ ubuntu:
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
                 - cd ..
+                - coverage run --source=. -m unittest discover -s unit -p '*Test.py'
                 - touch /tmp/report
                 - echo 'Statement Coverage:' > /tmp/report
                 - coverage report > /tmp/report
