--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,14 +23,15 @@ debian:
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
                 - cd .. #
-                - coverage run --source=.. -m unittest discover -s unit -p '*Test.py'
+                - coverage run --source=/builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer -m unittest discover -s unit -p '*Test.py'
                 - touch /tmp/report
                 - echo 'Statement Coverage:' > /tmp/report
                 - coverage report >> /tmp/report
                 - echo > /tmp/report
-                - coverage run --source=.. --branch -m unittest discover -s unit -p '*Test.py'
+                - coverage run --source=/builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer --branch -m unittest discover -s unit -p '*Test.py'
                 - echo 'Branch Coverage:' >> /tmp/report
                 - coverage report >> /tmp/report
+                - sed -i 's+/builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer/+aminer/+g' /tmp/report
                 - cat /tmp/report
                 
 ubuntu:
@@ -57,12 +58,13 @@ ubuntu:
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
                 - cd ..
-                - coverage run --source=.. -m unittest discover -s unit -p '*Test.py'
+                - coverage run --source=/builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer -m unittest discover -s unit -p '*Test.py'
                 - touch /tmp/report
                 - echo 'Statement Coverage:' > /tmp/report
                 - coverage report >> /tmp/report
                 - echo >> /tmp/report
-                - coverage run --source=.. --branch -m unittest discover -s unit -p '*Test.py'
+                - coverage run --source=/builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer --branch -m unittest discover -s unit -p '*Test.py'
                 - echo 'Branch Coverage:' >> /tmp/report
                 - coverage report >> /tmp/report
+                - sed -i 's+/builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer/+aminer/+g' /tmp/report
                 - cat /tmp/report
