--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ debian:
                 - ./aminerIntegrationTest.sh
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
-                - cd .. #
+                - cd .. 
+                - python3 -m unittest discover -s unit -p '*Test.py'
                 - coverage run --source=./aminer -m unittest discover -s unit -p '*Test.py'
                 - touch /tmp/report
                 - echo 'Statement Coverage:' > /tmp/report
