--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ debian:
                 #- coverage run --source=./aminer --branch -m unittest discover -s unit -p '*Test.py'
                 #- echo 'Branch Coverage:' >> /tmp/report
                 #- coverage report >> /tmp/report
-                #- cat /tmp/report
+                ##- cat /tmp/report
                 
 ubuntu:
         image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-ubuntu
