--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,3 +70,4 @@ ubuntu:
                 - echo 'Branch Coverage:' >> /tmp/report
                 - coverage report >> /tmp/report
                 - cat /tmp/report
+                # test
