--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ debian:
                 - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
                 - chown -h aminer:aminer /usr/bin/AMiner
                 - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
+                - python3 -m unittest discover -s unit -p '*Test.py'
                 - cd integration
                 - cp config* /tmp
                 - chmod +x aminerIntegrationTest.sh
