--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,68 @@
-debian:
+sonarqube:
         image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-debian
 
         script:
-                - pwd
-                - ls -l
+                - $(find /opt/ -type f -name sonar-scanner) -Dsonar.projectName=Aminer-Dev -Dsonar.host.url=http://10.103.251.153:9000 -Dsonar.projectKey=deff975a5561d285e315daa894ab291c7bd10a19 -Dsonar.gitlab.max_major_issues_gate=0
+
+debian:
+        image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-debian
+
+        before_script:
+                - service rsyslog start
+                - service exim4 start
+                - apt install procps -y
+                - pip3 install coverage
+                - apt install cpulimit -y
+
+        script:
                 - ansible-playbook /opt/ansible/playbook.yml
+                - git clone https://gitlab+deploy-token-aecidtestsuite:vu18Eo6k7xfA22vPvorx@git-service.ait.ac.at/ict-caiscluster/aecid-testsuite.git
+                - cp -r /builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer /builds/ict-caiscluster/logdata-anomaly-miner/aecid-testsuite/aminer
+                - cd aecid-testsuite
+                - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
+                - chown -h aminer:aminer /usr/bin/AMiner
+                - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
+                - cd integration
+                - cp config* /tmp
+                - chmod +x aminerIntegrationTest.sh
+                - chmod +x aminerIntegrationTest2.sh
+                - ./aminerIntegrationTest.sh
+                - ./aminerIntegrationTest2.sh
+                - rm /var/mail/mail
+                - cd .. 
+                - python3 -m unittest discover -s unit -p '*Test.py'
+                
 
 ubuntu:
         image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-ubuntu
-
+        
+        before_script:
+                - service rsyslog start
+                - service exim4 start
+                - pip3 install coverage
+                - apt install cpulimit -y
+        
         script:
-                - pwd
-                - ls -l
                 - ansible-playbook /opt/ansible/playbook.yml
+                - git clone https://gitlab+deploy-token-aecidtestsuite:vu18Eo6k7xfA22vPvorx@git-service.ait.ac.at/ict-caiscluster/aecid-testsuite.git
+                - cp -r /builds/ict-caiscluster/logdata-anomaly-miner/source/root/usr/lib/logdata-anomaly-miner/aminer /builds/ict-caiscluster/logdata-anomaly-miner/aecid-testsuite/aminer
+                - cd aecid-testsuite
+                - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
+                - chown -h aminer:aminer /usr/bin/AMiner
+                - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
+                - cd integration
+                - cp config* /tmp
+                - chmod +x aminerIntegrationTest.sh
+                - chmod +x aminerIntegrationTest2.sh
+                - ./aminerIntegrationTest.sh
+                - ./aminerIntegrationTest2.sh
+                - rm /var/mail/mail
+                - cd ..
+                - coverage run --source=./aminer -m unittest discover -s unit -p '*Test.py'
+                - touch /tmp/report
+                - echo 'Statement Coverage:' > /tmp/report
+                - coverage report >> /tmp/report
+                - coverage run --source=./aminer --branch -m unittest discover -s unit -p '*Test.py'
+                - echo 'Branch Coverage:' >> /tmp/report
+                - coverage report >> /tmp/report
+                - cat /tmp/report
