--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ debian:
                 - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
                 - chown -h aminer:aminer /usr/bin/AMiner
                 - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
+                - python3 -m unittest discover -s unit -p '*Test.py'
+                - rm /var/mail/mail
                 - cd integration
                 - cp config* /tmp
                 - chmod +x aminerIntegrationTest.sh
@@ -29,9 +31,15 @@ debian:
                 - ./aminerIntegrationTest.sh
                 - ./aminerIntegrationTest2.sh
                 - rm /var/mail/mail
-                - cd .. 
-                - python3 -m unittest discover -s unit -p '*Test.py'
-                
+                - cd ..
+                - coverage run --source=./aminer -m unittest discover -s unit -p '*Test.py'
+                - touch /tmp/report
+                - echo 'Statement Coverage:' > /tmp/report
+                - coverage report >> /tmp/report
+                - coverage run --source=./aminer --branch -m unittest discover -s unit -p '*Test.py'
+                - echo 'Branch Coverage:' >> /tmp/report
+                - coverage report >> /tmp/report
+                - cat /tmp/report
 
 ubuntu:
         image: git-service.ait.ac.at:8010/ict-caiscluster/logdata-anomaly-miner/aminer-ubuntu
@@ -50,6 +58,8 @@ ubuntu:
                 - chown -R aminer:aminer /usr/lib/logdata-anomaly-miner
                 - chown -h aminer:aminer /usr/bin/AMiner
                 - chmod +x /usr/lib/logdata-anomaly-miner/AMiner
+                - python3 -m unittest discover -s unit -p '*Test.py'
+                - rm /var/mail/mail
                 - cd integration
                 - cp config* /tmp
                 - chmod +x aminerIntegrationTest.sh
