--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
 
 install:
-  - pip3 install coverage
+  - sudo pip3 install coverage
   - sudo ansible-playbook playbook.yml
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
@@ -20,9 +20,9 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
-  - ./runUnittests.sh
-  - ./runAMinerDemo.sh demo/AMiner/demo-config.py
-  - ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
+  #- ./runUnittests.sh
+  #- ./runAMinerDemo.sh demo/AMiner/demo-config.py
+  #- ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest.sh config.py
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest2.sh config21.py config22.py
   - ./runCoverageTests.sh
