--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
 dist: bionic
 
 before_install:
+  - cat /etc/hostname
+  - sudo echo localhost > /etc/hostname
+  - cat /etc/hostname
   - sudo apt-get update -y
   - sudo apt-get install -y exim4 procps cpulimit ansible mailutils
   - git clone https://github.com/ait-aecid/aminer-ansible.git roles/aminer
@@ -20,9 +23,6 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
-  - cat /etc/hostname
-  - echo localhost > /etc/hostname
-  - cat /etc/hostname
   #- ./runUnittests.sh
   #- ./runAMinerDemo.sh demo/AMiner/demo-config.py
   #- ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
