--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: bionic
 
 before_install:
   - cat /etc/hostname
-  - sudo echo localhost > /etc/hostname
+  - sudo `echo localhost > /etc/hostname`
   - cat /etc/hostname
   - sudo apt-get update -y
   - sudo apt-get install -y exim4 procps cpulimit ansible mailutils
