--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ python:
 dist: bionic
 
 before_install:
-  - cat /etc/hostname
-  - sudo `echo localhost > /etc/hostname`
-  - cat /etc/hostname
   - sudo apt-get update -y
   - sudo apt-get install -y exim4 procps cpulimit ansible mailutils
   - git clone https://github.com/ait-aecid/aminer-ansible.git roles/aminer
@@ -26,6 +23,9 @@ script:
   #- ./runUnittests.sh
   #- ./runAMinerDemo.sh demo/AMiner/demo-config.py
   #- ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
+  - cat /etc/hostname
+  - sudo echo localhost > /etc/hostname
+  - cat /etc/hostname
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest.sh config.py
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest2.sh config21.py config22.py
   - ./runCoverageTests.sh
