--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   #- ./runAMinerDemo.sh demo/AMiner/demo-config.py
   #- ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
   - cat /etc/hostname
-  - sudo echo localhost > /etc/hostname
+  - echo localhost | sudo tee /etc/hostname
   - cat /etc/hostname
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest.sh config.py
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest2.sh config21.py config22.py
