--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - echo localhost | sudo tee /etc/hostname
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest.sh config.py
   - ./runAMinerIntegrationTest.sh aminerIntegrationTest2.sh config21.py config22.py
-  - ./runCoverageTests.sh
+  - sudo ./runCoverageTests.sh
 
 after_script:
   - cd ..
