--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ script:
   #- ./runAMinerDemo.sh demo/AMiner/demo-config.py
   #- ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
   - echo localhost | sudo tee /etc/hostname
-  - ./runAMinerIntegrationTest.sh aminerIntegrationTest.sh config.py
-  - ./runAMinerIntegrationTest.sh aminerIntegrationTest2.sh config21.py config22.py
+  #- ./runAMinerIntegrationTest.sh aminerIntegrationTest.sh config.py
+  #- ./runAMinerIntegrationTest.sh aminerIntegrationTest2.sh config21.py config22.py
   - ./runCoverageTests.sh
 
 after_script:
