--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -11,3 +11,7 @@ enabled = true
 [[analyzers]]
 name = "test-coverage"
 enabled = true
+
+exclude_patterns = [
+  "aecid-testsuite/system/performance-tests/results/**"
+]
