adapted exclusion patterns in .deepsource.toml.

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -13,5 +13,5 @@ name = "test-coverage"
 enabled = true
 
 exclude_patterns = [
-  "aecid-testsuite/system/performance-tests/results/**"
+  "aecid-testsuite/system/performance-tests/results/*/*/*.py"
 ]
