--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get update -y
   - sudo apt-get install -y exim4 procps cpulimit ansible mailutils python3-pip #python3-kafka
   - git clone https://github.com/ait-aecid/aminer-ansible.git roles/aminer
+  - cp $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
   - ln -s $PWD/source/root/usr/lib/logdata-anomaly-miner/aminer $PWD/aecid-testsuite/aminer
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
@@ -15,7 +16,6 @@ install:
   - sudo -u root pip3 install coverage
   - sudo -u root pip3 install kafka
   - sudo ansible-playbook playbook.yml
-  - ln -s $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/aecid-testsuite/ApacheAccessModel.py
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
   - sudo chmod +x runAMinerDemo.sh
@@ -35,5 +35,5 @@ script:
 after_script:
   - cd ..
   - rm $PWD/aecid-testsuite/aminer
-  - rm $PWD/aecid-testsuite/ApacheAccessModel.py
+  - rm $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
   - rm $PWD/aecid-testsuite/demo/AMiner/template_config.py
