created symlink instead of copying the config file in .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo apt-get update -y
   - sudo apt-get install -y exim4 procps cpulimit ansible mailutils python3-pip
   - git clone https://github.com/ait-aecid/aminer-ansible.git roles/aminer
-  - cp $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
+  - ln -s $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/etc/aminer/conf-enabled/ApacheAccessModel.py
   - ln -s $PWD/source/root/usr/lib/logdata-anomaly-miner/aminer $PWD/aecid-testsuite/aminer
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
@@ -34,5 +34,4 @@ script:
 after_script:
   - cd ..
   - rm $PWD/aecid-testsuite/aminer
-  - rm $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
   - rm $PWD/aecid-testsuite/demo/AMiner/template_config.py
