--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ dist: bionic
 
 before_install:
   - sudo apt-get update -y
-  - sudo apt-get install -y exim4 procps cpulimit ansible mailutils python3-pip
+  - sudo apt-get install -y exim4 procps cpulimit ansible mailutils python3-pip python3-kafka
   - git clone https://github.com/ait-aecid/aminer-ansible.git roles/aminer
-  - ln -s $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/etc/aminer/conf-enabled/ApacheAccessModel.py
+  - ln -s $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
   - ln -s $PWD/source/root/usr/lib/logdata-anomaly-miner/aminer $PWD/aecid-testsuite/aminer
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
@@ -34,4 +34,5 @@ script:
 after_script:
   - cd ..
   - rm $PWD/aecid-testsuite/aminer
+  - rm $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
   - rm $PWD/aecid-testsuite/demo/AMiner/template_config.py
