--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ before_install:
   - sudo apt-get update -y
   - sudo apt-get install -y exim4 procps cpulimit ansible mailutils python3-pip python3-kafka
   - git clone https://github.com/ait-aecid/aminer-ansible.git roles/aminer
-  - ln -s $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/usr/lib/logdata-anomaly-miner/ApacheAccessModel.py
+  - cp $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/etc/aminer/conf-enabled/ApacheAccessModel.py
   - ln -s $PWD/source/root/usr/lib/logdata-anomaly-miner/aminer $PWD/aecid-testsuite/aminer
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
   - sed -e "s+{{SOURCEDIR}}+$PWD+g" .playbook.yml > playbook.yml
 
 install:
-  - sudo -u root pip3 install coverage
-  - sudo -u root pip3 install kafka
+  - sudo -H -u root pip3 install coverage
+  - sudo -H -u root pip3 install kafka
   - sudo ansible-playbook playbook.yml
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
