--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,9 @@ before_install:
 
 install:
   - sudo -H -u root pip3 install coverage
-  - sudo -H -u root pip3 install kafka
-  - pip3 install kafka
+  #- sudo -H -u root pip3 install kafka
+  #- pip3 install kafka
   - sudo ansible-playbook playbook.yml
-  #- sudo ln -s /usr/lib/python3/dist-packages/kafka $PWD/source/root/etc/aminer/conf-enabled/kafka
   - sudo ln -s /usr/lib/python3/dist-packages/kafka /etc/aminer/conf-enabled/kafka
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
