--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ before_install:
 
 install:
   - sudo -H -u root pip3 install coverage
-  #- sudo -H -u root pip3 install kafka
-  #- pip3 install kafka
   - sudo ansible-playbook playbook.yml
   - sudo ln -s /usr/lib/python3/dist-packages/kafka /etc/aminer/conf-enabled/kafka
   - cd aecid-testsuite
@@ -25,7 +23,7 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
-  #- ./runUnittests.sh
+  - ./runUnittests.sh
   - ./runAMinerDemo.sh demo/AMiner/demo-config.py
   - ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
   - ./runAMinerDemo.sh demo/AMiner/template_config.py
